--- a/homepage.html
+++ b/homepage.html
@@ -17,7 +17,7 @@
 
     <script>
       var greeting_title = "[[b;#00EE00;]Richard Lancaster\n" + 
-        "Commputer Science student/Software Engineer/Tinkerer]\n\n" 
+        "Computer Science student/Software Engineer/Tinkerer]\n\n" 
 
       var greeting_string = greeting_title + "Commands:\n" + 
         "[[b;#00EE00;]whoami]   - info about myself\n" + 
