Style change and switch to rpc

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta http-equiv="Content-Style-Type" content="text/css" />
     <meta http-equiv="Content-Script-Type" content="text/javascript" />
-    <meta name="description" content="Home page of Ricahard Lancaster" />
+    <meta name="description" content="Homepage for Ricahard Lancaster" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="js/jquery.terminal-0.8.7.js" type="text/javascript"></script>
     <script src="js/jquery.mousewheel-min.js" type="text/javascript"></script>
@@ -54,14 +54,15 @@
         },
         man: function(text) {
           this.echo("No manual entry for " + text.split("man "));
-        }
+        },
+        rpc: "rpc"
       }
 
       jQuery(function($, undefined) {
-        $('#terminal').terminal(commands, {  
+        $('#terminal').terminal("command", {  
             greetings: greeting_string,
             name: 'terminal',
-            prompt: 'guest@localhost:~$  '
+            prompt: 'guest@rl0.co.uk:~$  '
           });
       });
     </script>
