Small visual update

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         "[[b;#00EE00;]cv]       - goto my cv\n" +
         "[[b;#00EE00;]github]   - goto my github\n" +
         "[[b;#00EE00;]linkedin] - goto my linkedIn\n" +
-        "[[b;#00EE00;]facebook] - goto my facebook\n"
+        "[[b;#00EE00;]facebook] - goto my facebook"
 
       var whoami = greeting_title
 
