Can't spell my own name... I'm an embarrassment

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta http-equiv="Content-Style-Type" content="text/css" />
     <meta http-equiv="Content-Script-Type" content="text/javascript" />
-    <meta name="description" content="Homepage for Ricahard Lancaster" />
+    <meta name="description" content="Homepage for Richard Lancaster" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="js/jquery.terminal-0.8.7.js" type="text/javascript"></script>
     <script src="js/jquery.mousewheel-min.js" type="text/javascript"></script>
